--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
         <div class="bear-info container">
             <div class="row">
                 <div class="bear-info-text col-12">
-                    <h2>我們蒐集了台灣黑熊相關的故事、知識與資訊</h2>
-                    <h2>希望能與您一同了解台灣黑熊的美麗之處</h2>
+                    <h2>我們蒐集了台灣黑熊相關的故事、知識與資訊<br>希望能與您一同了解台灣黑熊的美麗之處</h2>
                 </div>
             </div>
         </div>
@@ -197,50 +196,42 @@
                         <div class="bear-know-slide-arrow-right"></div>
                     </div>
                     <div class="bear-know-slide-long">
-                        <a href="bear-know-1.html">
-                            <div class="bear-know-slide-chapter">
-                                <div class="bear-know-icon-shell col-4">
-                                    <div class="bear-know-icon col-xl-3"></div>
-                                </div>
-                                <div class="bear-know-text col-6">
-                                    <h3>黑熊特徵</h3>
-                                    <p>台灣黑熊究竟跟其他熊熊該怎麼分辨呢?</p>
-                                </div>
+                        <div class="bear-know-slide-chapter">
+                            <div class="bear-know-icon-shell col-4">
+                                <div class="bear-know-icon col-xl-3"></div>
                             </div>
-                        </a>
-                        <a href="bear-know-2.html">
-                            <div class="bear-know-slide-chapter col-xl-3">
-                                <div class="bear-know-icon-shell col-4">
-                                    <div class="bear-know-icon"></div>
-                                </div>
-                                <div class="bear-know-text col-6">
-                                    <h3>黑熊地理</h3>
-                                    <p>台灣黑熊究竟住在哪裡呢?</p>
-                                </div>
+                            <div class="bear-know-text col-6">
+                                <h3>黑熊特徵</h3>
+                                <p>台灣黑熊跟其他熊熊該怎麼分辨呢?</p>
                             </div>
-                        </a>
-                        <a href="bear-know-3.html">
-                            <div class="bear-know-slide-chapter col-xl-3">
-                                <div class="bear-know-icon-shell col-4">
-                                    <div class="bear-know-icon"></div>
-                                </div>
-                                <div class="bear-know-text col-6">
-                                    <h3>黑熊特徵</h3>
-                                    <p>台灣黑熊有什麼特殊的習性呢?</p>
-                                </div>
+                        </div>
+                        <div class="bear-know-slide-chapter col-xl-3">
+                            <div class="bear-know-icon-shell col-4">
+                                <div class="bear-know-icon"></div>
                             </div>
-                        </a>
-                        <a href="bear-know-4.html">
-                            <div class="bear-know-slide-chapter col-xl-3">
-                                <div class="bear-know-icon-shell col-4">
-                                    <div class="bear-know-icon"></div>
-                                </div>
-                                <div class="bear-know-text col-6">
-                                    <h3>黑熊特徵</h3>
-                                    <p>台灣黑熊究竟碰上了什麼危機呢?</p>
-                                </div>
+                            <div class="bear-know-text col-6">
+                                <h3>黑熊地理</h3>
+                                <p>台灣黑熊究竟住在哪裡呢?</p>
                             </div>
-                        </a>
+                        </div>
+                        <div class="bear-know-slide-chapter col-xl-3">
+                            <div class="bear-know-icon-shell col-4">
+                                <div class="bear-know-icon"></div>
+                            </div>
+                            <div class="bear-know-text col-6">
+                                <h3>黑熊特徵</h3>
+                                <p>台灣黑熊有什麼特殊的習性呢?</p>
+                            </div>
+                        </div>
+                        <div class="bear-know-slide-chapter col-xl-3">
+                            <div class="bear-know-icon-shell col-4">
+                                <div class="bear-know-icon"></div>
+                            </div>
+                            <div class="bear-know-text col-6">
+                                <h3>黑熊特徵</h3>
+                                <p>台灣黑熊究竟碰上了什麼危機呢?</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
