--- a/bear-story-1.html
+++ b/bear-story-1.html
@@ -14,7 +14,7 @@
 
 <body>
     <!------------------------- loading ------------------------->
-    <div class="loading">
+    <!-- <div class="loading">
         <div class="anibg">
             <div class="aniL"></div>
             <div class="aniR"></div>
@@ -34,7 +34,7 @@
                 <div class="aniLine"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!------------------------- title ------------------------->
     <div class="wrap">
